force-app/main/default/objects/Customer_Visit_With_Market_Share__c/Customer_Visit_With_Market_Share__c.object-meta.xml
<CustomObject>
    <label>Customer Visit With Market Share</label>
    <nameField>
        <displayFormat>M-{YYYY}{MM}{0000}</displayFormat>
        <label>No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Visit With Market Shares</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>