force-app/main/default/objects/Customer_Visit_With_Market_Share__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <label>Answer</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>