force-app/main/default/objects/Customer_Visit_With_Market_Share__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Store TV</fullName>
            </value>
            <value>
                <fullName>Store REF</fullName>
            </value>
            <value>
                <fullName>Store FL Washer</fullName>
            </value>
            <value>
                <fullName>Store HP Dryer</fullName>
            </value>
            <value>
                <fullName>Store MW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>