force-app/main/default/objects/Customer_Visit_With_Market_Share__c/fields/Customer_Visit__c.field-meta.xml
<CustomField>
    <fullName>Customer_Visit__c</fullName>
    <label>Customer Visit</label>
    <referenceTo>Customer_Visit__c</referenceTo>
    <relationshipLabel>Customer Visit With Market Shares</relationshipLabel>
    <relationshipName>Customer_Visit_With_Market_Shares</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>