force-app/main/default/objects/Customer_Visit_With_Market_Share__c/fields/Time_Period_Captured__c.field-meta.xml
<CustomField>
    <fullName>Time_Period_Captured__c</fullName>
    <label>Time Period Captured</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Last Month</fullName>
            </value>
            <value>
                <fullName>Last QTR</fullName>
            </value>
            <value>
                <fullName>CYTD</fullName>
            </value>
            <value>
                <fullName>FYTD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>